[gd_scene load_steps=68 format=3 uid="uid://bv6nmywn88rro"]

[ext_resource type="Script" path="res://chubacabra.gd" id="1_v3ton"]
[ext_resource type="AudioStream" uid="uid://w6dy5jvvtetp" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubamove/Chupacabra WAVs/Chupacabra Footstep 1.wav" id="2_2hfq8"]
[ext_resource type="Script" path="res://finite_state_machine.gd" id="2_6wyqj"]
[ext_resource type="AudioStream" uid="uid://cpy11a7gp87wo" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubamove/Chupacabra WAVs/Chupacabra Spawn Roar.wav" id="2_fexlp"]
[ext_resource type="AudioStream" uid="uid://ca4pku0fajlrh" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubamove/Chupacabra WAVs/Chupacabra Footstep 2.wav" id="2_ob2vb"]
[ext_resource type="AudioStream" uid="uid://ck470oi82amrq" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubamove/Chupacabra WAVs/Chupacabra Melee.wav" id="2_vaao3"]
[ext_resource type="Script" path="res://idle.gd" id="3_k2l71"]
[ext_resource type="AudioStream" uid="uid://dw78p3tvxp6h7" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubamove/Chupacabra WAVs/Chupacabra Charge Attack.wav" id="3_pwenx"]
[ext_resource type="Script" path="res://Chupacabra_New/follow_new.gd" id="9_gg3hq"]
[ext_resource type="Texture2D" uid="uid://bw3rex6kmr3d4" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0000.png" id="9_yt7cy"]
[ext_resource type="Script" path="res://Chupacabra_New/slash_new.gd" id="10_kqwls"]
[ext_resource type="Texture2D" uid="uid://2n0wcwubq6g6" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0001.png" id="10_m8gk6"]
[ext_resource type="Script" path="res://Chupacabra_New/roar_new.gd" id="11_1uqoq"]
[ext_resource type="Texture2D" uid="uid://xjj2qcxu27sa" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0002.png" id="11_physy"]
[ext_resource type="Script" path="res://Chupacabra_New/dash_new.gd" id="12_5ytg8"]
[ext_resource type="Texture2D" uid="uid://dpv135m6ir87k" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0003.png" id="12_qqllh"]
[ext_resource type="Texture2D" uid="uid://bsxqdlkbd5pn1" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0004.png" id="13_bwtib"]
[ext_resource type="Texture2D" uid="uid://bdpasp8f0que4" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0005.png" id="14_ua2gb"]
[ext_resource type="Texture2D" uid="uid://ds4kvtocl7vrk" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0006.png" id="15_qcrxd"]
[ext_resource type="Texture2D" uid="uid://dd5yp8li75xgy" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0007.png" id="16_tx8g5"]
[ext_resource type="Texture2D" uid="uid://dryi6rbngenqj" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0008.png" id="17_fb76c"]
[ext_resource type="Texture2D" uid="uid://d3bohcgu40daw" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0009.png" id="18_y2omi"]
[ext_resource type="Texture2D" uid="uid://dtpgmwkh67df4" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0010.png" id="19_rjahy"]
[ext_resource type="Texture2D" uid="uid://ce4spf4iuu4ys" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0011.png" id="20_xgco7"]
[ext_resource type="Texture2D" uid="uid://cn0s177qq77g7" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0012.png" id="21_si6pe"]
[ext_resource type="Texture2D" uid="uid://d00a3bdj51mq2" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0013.png" id="22_ow0yp"]
[ext_resource type="Texture2D" uid="uid://crlir1658tiyj" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0014.png" id="23_jjmmf"]
[ext_resource type="Texture2D" uid="uid://b43nuf33pl83y" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0015.png" id="24_gsll7"]
[ext_resource type="Texture2D" uid="uid://cde5fppiisg03" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0016.png" id="25_kk577"]
[ext_resource type="Texture2D" uid="uid://dkoyac5x1in6t" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0017.png" id="26_ccoi7"]
[ext_resource type="Texture2D" uid="uid://b5yj8nmyjasd0" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0018.png" id="27_av2d4"]
[ext_resource type="Texture2D" uid="uid://d1r0tfx5pwfjt" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0019.png" id="28_m1inj"]
[ext_resource type="Texture2D" uid="uid://cr8g3rkh6gtuf" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0020.png" id="29_2vfe8"]
[ext_resource type="Texture2D" uid="uid://bqm0vm40r8xmb" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubacharge/chubacharge_0021.png" id="30_fyaar"]
[ext_resource type="Texture2D" uid="uid://bjyvwia30ofoh" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubamove/chubamove_0000.png" id="31_n6q12"]
[ext_resource type="Texture2D" uid="uid://id58w0ruvwwt" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubamove/chubamove_0001.png" id="32_0mtun"]
[ext_resource type="Texture2D" uid="uid://d261uo74f6a01" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubamove/chubamove_0002.png" id="33_xy76j"]
[ext_resource type="Texture2D" uid="uid://ocjpwyp8g5eg" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubamove/chubamove_0003.png" id="34_s07bq"]
[ext_resource type="Texture2D" uid="uid://mkhlo8mjfy8q" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubamove/chubamove_0004.png" id="35_gf8iq"]
[ext_resource type="Texture2D" uid="uid://db4s24m0yrcwu" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaroar/chubaroar_0000.png" id="36_dkxl1"]
[ext_resource type="Texture2D" uid="uid://dhsbh0buctk1l" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaroar/chubaroar_0001.png" id="37_mohn2"]
[ext_resource type="Texture2D" uid="uid://caiv3rurrma83" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaroar/chubaroar_0002.png" id="38_vrui8"]
[ext_resource type="Texture2D" uid="uid://b0j76xwaqp8ar" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaroar/chubaroar_0003.png" id="39_0uyna"]
[ext_resource type="Texture2D" uid="uid://v12vkfea2tyb" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaroar/chubaroar_0004.png" id="40_62nhy"]
[ext_resource type="Texture2D" uid="uid://8nqr3tie1xed" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaroar/chubaroar_0005.png" id="41_w5iye"]
[ext_resource type="Texture2D" uid="uid://c28rne7guqmu" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaroar/chubaroar_0006.png" id="42_phrto"]
[ext_resource type="Texture2D" uid="uid://dyt4xkrjoweoq" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaroar/chubaroar_0007.png" id="43_qgf2q"]
[ext_resource type="Texture2D" uid="uid://s4ild8w2dghn" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaroar/chubaroar_0008.png" id="44_hqvt8"]
[ext_resource type="Texture2D" uid="uid://cmil4o6lvpbhg" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaroar/chubaroar_0009.png" id="45_tf2nq"]
[ext_resource type="Texture2D" uid="uid://b02hv30f7udl7" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaroar/chubaroar_0010.png" id="46_ie8yj"]
[ext_resource type="Texture2D" uid="uid://h07dyf8luqlc" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaroar/chubaroar_0011.png" id="47_rmhyx"]
[ext_resource type="Texture2D" uid="uid://chrpe54sopki3" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaroar/chubaroar_0012.png" id="48_42f3v"]
[ext_resource type="Texture2D" uid="uid://bly0ywnk5trs4" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaroar/chubaroar_0013.png" id="49_w5qfj"]
[ext_resource type="Texture2D" uid="uid://bnkje20b04rhh" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaslash/chubaslash_0000.png" id="50_iawhb"]
[ext_resource type="Texture2D" uid="uid://bp3u0o1birls7" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaslash/chubaslash_0001.png" id="51_ydyqu"]
[ext_resource type="Texture2D" uid="uid://db51fqu8vy6yt" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaslash/chubaslash_0002.png" id="52_2ahtk"]
[ext_resource type="Texture2D" uid="uid://crc0e4hgg3v1d" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaslash/chubaslash_0003.png" id="53_gki3i"]
[ext_resource type="Texture2D" uid="uid://df5l0qepr8u2a" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaslash/chubaslash_0004.png" id="54_jh8bl"]
[ext_resource type="Texture2D" uid="uid://nsb2r0tc1shr" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaslash/chubaslash_0005.png" id="55_sswig"]
[ext_resource type="Texture2D" uid="uid://0u7i0arn5xtn" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaslash/chubaslash_0006.png" id="56_n0h8l"]
[ext_resource type="Texture2D" uid="uid://dej7wtob3qrt3" path="res://Chupacabra_New/chupacabra/chupacabra_anims/chubaslash/chubaslash_0007.png" id="57_nfe8u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d14ql"]
bg_color = Color(0.267491, 0, 0.0169396, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l150d"]
bg_color = Color(0.810923, 0, 0.244318, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drkii"]
size = Vector2(100, 72)

[sub_resource type="CircleShape2D" id="CircleShape2D_agv6m"]
radius = 80.0062

[sub_resource type="CircleShape2D" id="CircleShape2D_5i42r"]
radius = 19.753

[sub_resource type="SpriteFrames" id="SpriteFrames_quu0x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_yt7cy")
}, {
"duration": 1.0,
"texture": ExtResource("10_m8gk6")
}, {
"duration": 1.0,
"texture": ExtResource("11_physy")
}, {
"duration": 1.0,
"texture": ExtResource("12_qqllh")
}, {
"duration": 1.0,
"texture": ExtResource("13_bwtib")
}, {
"duration": 1.0,
"texture": ExtResource("14_ua2gb")
}, {
"duration": 2.0,
"texture": ExtResource("15_qcrxd")
}, {
"duration": 2.0,
"texture": ExtResource("16_tx8g5")
}, {
"duration": 1.0,
"texture": ExtResource("17_fb76c")
}, {
"duration": 1.0,
"texture": ExtResource("18_y2omi")
}, {
"duration": 1.0,
"texture": ExtResource("19_rjahy")
}, {
"duration": 1.0,
"texture": ExtResource("20_xgco7")
}, {
"duration": 1.0,
"texture": ExtResource("21_si6pe")
}, {
"duration": 1.0,
"texture": ExtResource("22_ow0yp")
}, {
"duration": 1.0,
"texture": ExtResource("23_jjmmf")
}, {
"duration": 1.0,
"texture": ExtResource("24_gsll7")
}, {
"duration": 1.0,
"texture": ExtResource("25_kk577")
}, {
"duration": 1.0,
"texture": ExtResource("26_ccoi7")
}, {
"duration": 1.0,
"texture": ExtResource("27_av2d4")
}, {
"duration": 1.0,
"texture": ExtResource("28_m1inj")
}, {
"duration": 1.0,
"texture": ExtResource("29_2vfe8")
}, {
"duration": 1.0,
"texture": ExtResource("30_fyaar")
}],
"loop": false,
"name": &"dash",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("31_n6q12")
}, {
"duration": 1.0,
"texture": ExtResource("32_0mtun")
}, {
"duration": 1.0,
"texture": ExtResource("33_xy76j")
}, {
"duration": 1.0,
"texture": ExtResource("34_s07bq")
}, {
"duration": 1.0,
"texture": ExtResource("35_gf8iq")
}],
"loop": true,
"name": &"follow",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_dkxl1")
}, {
"duration": 1.0,
"texture": ExtResource("37_mohn2")
}, {
"duration": 1.0,
"texture": ExtResource("38_vrui8")
}, {
"duration": 1.0,
"texture": ExtResource("39_0uyna")
}, {
"duration": 1.0,
"texture": ExtResource("40_62nhy")
}, {
"duration": 1.0,
"texture": ExtResource("41_w5iye")
}, {
"duration": 1.0,
"texture": ExtResource("42_phrto")
}, {
"duration": 1.0,
"texture": ExtResource("43_qgf2q")
}, {
"duration": 1.0,
"texture": ExtResource("44_hqvt8")
}, {
"duration": 1.0,
"texture": ExtResource("45_tf2nq")
}, {
"duration": 1.0,
"texture": ExtResource("46_ie8yj")
}, {
"duration": 1.0,
"texture": ExtResource("47_rmhyx")
}, {
"duration": 1.0,
"texture": ExtResource("48_42f3v")
}, {
"duration": 1.0,
"texture": ExtResource("49_w5qfj")
}],
"loop": false,
"name": &"roar",
"speed": 10.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("50_iawhb")
}, {
"duration": 0.75,
"texture": ExtResource("51_ydyqu")
}, {
"duration": 0.75,
"texture": ExtResource("52_2ahtk")
}, {
"duration": 0.75,
"texture": ExtResource("53_gki3i")
}, {
"duration": 0.75,
"texture": ExtResource("54_jh8bl")
}, {
"duration": 0.75,
"texture": ExtResource("55_sswig")
}, {
"duration": 1.0,
"texture": ExtResource("56_n0h8l")
}, {
"duration": 2.0,
"texture": ExtResource("57_nfe8u")
}],
"loop": false,
"name": &"slash",
"speed": 16.0
}]

[node name="ChubacabraBoss" type="CharacterBody2D" groups=["boss"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_v3ton")

[node name="Chupacabra_Slash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_vaao3")

[node name="Chupacabra_Charge" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pwenx")

[node name="Chupacabra_Roar" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_fexlp")

[node name="Chupacabra_Run_1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_2hfq8")

[node name="Chupacabra_Run_2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ob2vb")

[node name="Boss_UI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="Boss_UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -261.0
offset_top = -77.0
offset_right = 262.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_d14ql")
theme_override_styles/fill = SubResource("StyleBoxFlat_l150d")
max_value = 300.0
show_percentage = false

[node name="Label" type="Label" parent="Boss_UI/ProgressBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.494264
anchor_top = -1.11111
anchor_right = 0.494264
anchor_bottom = -1.11111
offset_left = -46.5
offset_right = 47.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Chubacabra"
metadata/_edit_use_anchors_ = true

[node name="Debug" type="Label" parent="."]
visible = false
offset_left = -29.0
offset_top = -48.0
offset_right = 20.0
offset_bottom = -25.0
text = "debug"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 24)
shape = SubResource("RectangleShape2D_drkii")

[node name="SlashArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlashArea"]
position = Vector2(0, 24)
shape = SubResource("CircleShape2D_agv6m")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(9.53674e-07, 25)
scale = Vector2(21.7709, 22.0507)
shape = SubResource("CircleShape2D_5i42r")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("2_6wyqj")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("3_k2l71")

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("9_gg3hq")

[node name="Slash" type="Node2D" parent="FiniteStateMachine" groups=["boss"]]
script = ExtResource("10_kqwls")

[node name="Roar" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_1uqoq")

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("12_5ytg8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_quu0x")
animation = &"dash"

[connection signal="body_entered" from="SlashArea" to="FiniteStateMachine/Follow" method="_on_slash_area_body_entered"]
[connection signal="body_entered" from="SlashArea" to="FiniteStateMachine/Slash" method="_on_slash_area_body_entered"]
[connection signal="body_entered" from="SlashArea" to="FiniteStateMachine/Dash" method="_on_slash_area_body_entered"]
[connection signal="body_exited" from="SlashArea" to="FiniteStateMachine/Follow" method="_on_slash_area_body_exited"]
[connection signal="body_exited" from="SlashArea" to="FiniteStateMachine/Slash" method="_on_slash_area_body_exited"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
